# CSTL_ForwardList

./: .gitignore  CMakeLists.txt  README.md
include/: BeginCode.h  ForwardList.h  Iterator.h
modules/cmake/: tests.cmake
res/cmake/: CSTL_ForwardListConfig.cmake.in
scripts/: configure.sh  install.sh
src/: Afx.h  Algorithms.c  Element.c  Element.h  ForwardList.c  ForwardList.h  Iterator.c  Node.c  Node.h  ThrowIfTrue.h
tests/: Afx.h  TestCapacity.c  TestCreation.c  TestSwap.c
